# smart-life-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  context_bundles.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTEXT_BUNDLES.md  DECISIONS.md  DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  PHASE1_TECHNICAL_SPEC.md  PRD_MVP.md  TESTING.md  VPS_SMOKE_RUNBOOK.md
scripts/: build_prompt_bundle.py
src/smart_life_bot/: __init__.py  main.py
src/smart_life_bot/application/: __init__.py  cashback_export.py  cashback_use_cases.py  draft_validation.py  dto.py  interfaces.py  use_cases.py
src/smart_life_bot/auth/: __init__.py  callback_models.py  interfaces.py  models.py  token_models.py
src/smart_life_bot/bot/: __init__.py  python_telegram_adapter.py  runner.py  telegram_polling.py  telegram_transport.py
src/smart_life_bot/calendar/: __init__.py  google_calendar.py  interfaces.py  models.py
src/smart_life_bot/cashback/: models.py  (+2 more)
tests/: test_application_flow.py  test_application_imports.py  test_build_prompt_bundle.py  test_cashback_mvp.py  test_claude_parser.py  test_domain_models.py  test_google_calendar_service.py  test_oauth_callback_boundary.py  test_oauth_connection_state_storage.py  test_oauth_token_exchange_boundary.py  test_parser_router.py  test_preflight.py  test_python_telegram_adapter.py  test_regression_flows.py  test_rule_based_parser.py  test_runtime_composition.py  test_settings.py  test_smoke.py  test_sqlite_storage.py  test_telegram_transport.py
(+22 files in other folders)
